# appinst

./: Cargo.toml  README.md
crates/appstream-cache/: Cargo.toml  README.md
crates/appstream-cache/src/: lib.rs  yaml.rs
crates/appstream-cache/src/dep11/: appstream.rs  codec.rs  mod.rs
crates/appstream-cache/src/flatpak/: mod.rs
src/: app.rs  main.rs  utils.rs
src/widgets/: app_listing.rs  mod.rs
