[package]
name = "apps-r-us"
version = "0.1.0"
edition = "2018"

description = "A software center for Linux"

[workspace]
members = ["crates/appstream-cache"]

[dependencies]
cascade = "1.0.0"
gio = "0.9.1"
glib = "0.10.3"
gtk = { version = "0.9.2", features = ["v3_16"]}
smol = "1.2.5"
appstream-cache = { path = "crates/appstream-cache" }
gdk-pixbuf = { version = "0.9.0", features = ["v2_36_8"] }
gdk-sys = "0.10.0"
cairo-rs = { version = "0.9.1", features = ["png"]}
