[package]
name = "appstream-cache"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.40"
bincode = "1.3.3"
flate2 = "1.0.20"
futures_codec = "0.4.1"
futures-lite = "1.11.3"
memchr = "2.4.0"
os_str_bytes = "3.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.17"
sled = { version = "0.34.6", features = ["zstd"]}
smol = "1.2.5"
tar = "0.4.35"
